# CG-project

./: .gitignore  CMakeLists.txt  LICENSE  README.md  data.json  glad.c  main.cpp
lib/: glad.c
lib/glad/: glad.h
res/: game.vert  temp.frag
res/3ds/floor/: grass_1msq_normal_01.3ds  grass_1msq_normal_02.3ds  grass_1msq_normal_03.3ds  grass_1msq_normal_04.3ds  grass_1msq_normal_05.3ds
res/pic/: t.tga  tp.tga
src/: main.cpp
src/component/: BaseShape.h  Component.h  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Floor.cpp  Floor.h  Fog.cpp  Fog.h  Grass.cpp  Grass.h  GrassCube.cpp  GrassCube.h  GrassFloor.cpp  GrassFloor.h  GrassPlane.cpp  GrassPlane.h  HumanModel.cpp  HumanModel.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Object.cpp  Object.h  Plane.cpp  Plane.h  Prism.cpp  Prism.hpp  Skybox.cpp  Skybox.h  Sphere.cpp  Sphere.h  TargetBox.cpp  TargetBox.hpp  TextureCube.cpp  TextureCube.h  TranslucenceCube.cpp  TranslucenceCube.h
src/component/common/: BaseShape.h  Component.h  Mesh.h  Model.cpp  Model.h  Object.cpp  Object.h
src/component/drawable/: Drawable.hpp  GrassCube.hpp  Prism.hpp  StoneCube.h  TNTCube.hpp  TranslucenceCube.cpp  TranslucenceCube.h  WaterCube.hpp
src/control/: Camera.cpp  Camera.h  Cursor.cpp  Cursor.h  KeyBoard.cpp  KeyBoard.h  Light.cpp  Light.h  Mesh.h  Model.h  Object.h  ResizeManager.cpp  ResizeManager.h  Shader.cpp  Shader.h  TextureManager.cpp  TextureManager.h  camera.cpp  camera.h  cursor.cpp
src/core/: GameEntry.cpp  GameEntry.h  GameManager.cpp  GameManager.h  Input.h
src/game/: WorldMap.cpp  WorldMap.hpp
src/json/: JSONMapReader.cpp  JSONMapReader.hpp  JSONMapWriter.cpp  JSONMapWriter.hpp  JSONUtil.hpp
src/test/: test.cpp
src/tool/: stb_image.cpp  stb_image.h
test/: g.cpp  test.cpp
